[tool.poetry]
name = "poc-cs"
version = "0.1.0"
description = ""
authors = ["Jesse Wang <jessewang@91app.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai-agents = "*"
chainlit = "*"
pydantic = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
